add website interface

--- a/roman-num.html
+++ b/roman-num.html
@@ -20,7 +20,7 @@
         </form>
       </div>
       <div id="result">
-        <p>The number you entered is <span class="result"></span> as a Roman numeral</p>
+        <p>The number you entered is <span class="results"></span> as a Roman numeral</p>
       </div>
     </div>
   </body>
